# bigdata-final

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
config/: pipeline.yaml
docs/: GUIA_NOTEBOOKS_EXPOSICION.md  GUIA_POWER_BI.md  REPORTE_FINAL_EJECUCION.md  architecture.md  dashboard_catalog.md  data_dictionary.md  exam_checklist.md
notebooks/: 00_ingesta_automatica_2026.ipynb  01_capa_bronze.ipynb  02_capa_silver.ipynb  03_capa_gold.ipynb  04_modelos_predictivos.ipynb  05_flujo_auditoria.ipynb  06_power_bi.ipynb
powerbi/: README.md  TLC_BigData.pbip
powerbi/TLC_BigData.Report/: .platform  definition.pbir
powerbi/TLC_BigData.Report/definition/pages/: pages.json
powerbi/TLC_BigData.SemanticModel/: .platform  diagramLayout.json
powerbi/TLC_BigData.SemanticModel/definition/: model.tmdl  relationships.tmdl
powerbi/TLC_BigData.SemanticModel/definition/tables/: D10_Auditoria.tmdl  DimCluster.tmdl  DimFecha.tmdl  DimHora.tmdl  DimPago.tmdl  DimServicio.tmdl  DimZonaDestino.tmdl  DimZonaOrigen.tmdl  Fact_AnomaliasDiarias.tmdl  Fact_DemandaDiaria.tmdl  (+13 more)
scripts/: execute_notebooks.py  generate_notebooks.py  generate_powerbi_professional.py  generate_powerbi_project.py  run_2026_only.ps1  run_exam.ps1
src/tlc_pipeline/: __init__.py  audit.py  catalog.py  cli.py  config.py  gold.py  ingest.py  models.py  powerbi.py  spark_session.py  transform.py  utils.py  verify.py
tests/: test_audit.py  test_catalog.py  test_gold.py  test_ingest.py  test_models.py  test_notebooks.py  test_powerbi.py  test_powerbi_project.py  test_transform.py
(+104 files in other folders)
