[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tlc-bigdata-final"
version = "1.0.0"
description = "Pipeline medallion PySpark + MongoDB para NYC TLC Trip Record Data"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "pyspark==3.5.6",
  "pymongo==4.13.2",
  "requests==2.32.4",
  "PyYAML==6.0.2",
  "pandas==2.2.3",
  "pyarrow==19.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "ruff==0.12.2",
]

[project.scripts]
tlc-pipeline = "tlc_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "integration: requiere Spark local",
  "network: consulta la fuente oficial TLC",
  "full: procesa el corpus completo",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

